packages/html/ui/site.css
/*!
 * # Semantic UI 2.2.12 - Site
 * http://github.com/semantic-org/semantic-ui/
 *
 *
 * Released under the MIT license
 * http://opensource.org/licenses/MIT
 *
 */


/*******************************
						 Page
*******************************/

html {
	font-size: 14px;
}
body {
	margin: 0px;
	padding: 0px;
	overflow-x: hidden;
	min-width: 320px;
	background: #FFFFFF;
	font-family: Arial, sans-serif;
	font-size: 14px;
	line-height: 1.4285em;
	color: rgb(0 0 0 / 87%);
}
.hidden:not(.divider),[hidden] {
	display:none !important;
}


/*******************************
						 Headers
*******************************/

h1,
h2,
h3,
h4,
h5 {
	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
	line-height: 1.2857em;
	margin: calc(2rem - 0.1429em) 0em 1rem;
	font-weight: bold;
	padding: 0;
}
h1 {
	min-height: 1rem;
	font-size: 2rem;
}
h2 {
	font-size: 1.7143rem;
}
h3 {
	font-size: 1.2857rem;
}
h4 {
	font-size: 1.0714rem;
}
h5 {
	font-size: 1rem;
}
h1:first-child,
h2:first-child,
h3:first-child,
h4:first-child,
h5:first-child {
	margin-top: 0;
}
h1:last-child,
h2:last-child,
h3:last-child,
h4:last-child,
h5:last-child {
	margin-bottom: 0;
}


/*******************************
						 Text
*******************************/

p {
	margin: 0 0 1em;
	line-height: 1.4285em;
}
p:first-child {
	margin-top: 0;
}
p:last-child {
	margin-bottom: 0;
}

.center.aligned {
	text-align:center;
}

.right.aligned {
	text-align:right;
}

.justify.aligned {
	text-align:justify;
}

span.lighter {
	font-weight:lighter;
}
span.black {
	color: black;
}
span.white {
	color: white;
}
span.red {
	color: red;
}
span.orange {
	color: orange;
}
span.yellow {
	color: yellow;
}
span.green {
	color: green;
}
span.blue {
	color: blue;
}
span.purple {
	color: purple;
}

/*-------------------
				Links
--------------------*/

a {
	color: #4183C4;
	text-decoration: none;
}
a:hover {
	color: #1e70bf;
	text-decoration: none;
}
a.icon[block-type="link"] {
	background-repeat:no-repeat;
	background-position:left center;
	background-size:contain;
	padding-left:1.7em;
}

i.icon {
	display:inline-block;
	margin:0;
	width:1.18em;
	height:1em;
	font-size:1em;
	text-align:center;
}
i.icon::before {
	display:block;
	width:1.18em;
	height:1em;
	background-position: center center;
	background-size:cover;
	font-style:normal;
}
.ui.icon.button > i.icon {
	vertical-align: middle;
}

.caret-icon {
	position:relative;
	padding-right: 1.2em;
	cursor: pointer;
}
.caret-icon::before {
	content: "\f0da";
	transform: rotate(0deg);
	/* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
	font-family: Accordion;
	font-style:normal;
	vertical-align: top;
	position: absolute;
	right: 0.5em;
	transition: transform 0.2s linear;
}
.active.caret-icon::before {
	transform:rotate(90deg);
}

/*******************************
				 Navigation
*******************************/

i.icon.prev::before {
	background-image: url('data:image/svg+xml;utf8,<svg width="100%" height="100%" viewBox="0 0 2048 2048" xmlns="http://www.w3.org/2000/svg"><path d="M1331 672q0 13-10 23l-393 393 393 393q10 10 10 23t-10 23l-50 50q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l50 50q10 10 10 23z"/></svg>');
	content:"";
}
i.icon.next::before {
	background-image: url('data:image/svg+xml;utf8,<svg width="100%" height="100%" viewBox="0 0 2048 2048" xmlns="http://www.w3.org/2000/svg"><path d="M1299 1088q0 13-10 23l-466 466q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l393-393-393-393q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l466 466q10 10 10 23z"/></svg>');
	content:"";
}
i.icon.up::before {
	background-image: url('data:image/svg+xml;utf8,<svg width="100%" height="100%" viewBox="0 0 2048 2048" xmlns="http://www.w3.org/2000/svg"><path d="M1523 1312q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"/></svg>');
	content:"";
}

.ui.breadcrumb .divider::before {
	content: ">";
}

i.icon.delete::before,
i.icon.close::before {
	font-size:2em;
	content:"×";
	width:auto;
	height:auto;
}

/*******************************
				 Scrollbars
*******************************/



/*******************************
					Highlighting
*******************************/


/* Site */
::selection {
	background-color: #CCE2FF;
	color: rgb(0 0 0 / 87%);
}

/* Force Simple Scrollbars */
body ::-webkit-scrollbar {
	appearance: none;
	width: 10px;
}
body ::-webkit-scrollbar-track {
	background: rgb(0 0 0 / 10%);
	border-radius: 0px;
}
body ::-webkit-scrollbar-thumb {
	cursor: pointer;
	border-radius: 5px;
	background: rgb(0 0 0 / 25%);
	transition: color 0.2s ease;
}
body ::-webkit-scrollbar-thumb:window-inactive {
	background: rgb(0 0 0 / 15%);
}
body ::-webkit-scrollbar-thumb:hover {
	background: rgb(128 135 139 / 80%);
}

/* Inverted UI */
body .ui.inverted::-webkit-scrollbar-track {
	background: rgb(255 255 255 / 10%);
}
body .ui.inverted::-webkit-scrollbar-thumb {
	background: rgb(255 255 255 / 25%);
}
body .ui.inverted::-webkit-scrollbar-thumb:window-inactive {
	background: rgb(255 255 255 / 15%);
}
body .ui.inverted::-webkit-scrollbar-thumb:hover {
	background: rgb(255 255 255 / 35%);
}

/* Fixes */
.ui.grid.container {
	display:flex;
}
.ui.grid.full {
	width: 100% !important;
	margin-left: auto !important;
	margin-right: auto !important;
}

